--- a/amazon_clone/pubspec.yaml
+++ b/amazon_clone/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_storage: ^10.3.10
   cloud_firestore: ^3.5.0
   firebase_auth: ^3.11.0
+  rating_dialog: ^2.0.4
 
 dev_dependencies:
   flutter_test:
