--- a/amazon_clone/pubspec.yaml
+++ b/amazon_clone/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^3.5.0
   firebase_auth: ^3.11.0
   rating_dialog: ^2.0.4
+  provider: ^6.0.4   
 
 dev_dependencies:
   flutter_test:
