--- a/amazon_clone/pubspec.yaml
+++ b/amazon_clone/pubspec.yaml
@@ -41,7 +41,8 @@ dependencies:
   cloud_firestore: ^3.5.0
   firebase_auth: ^3.11.0
   rating_dialog: ^2.0.4
-  provider: ^6.0.4   
+  provider: ^6.0.4 
+  image_picker: ^0.8.6  
 
 dev_dependencies:
   flutter_test:
